# inventory_system

./: Cargo.toml
migrations/: 20241212064804_init.sql
src/: main.rs
src/domain/: user.rs
src/infrastructure/: user_repository.rs
src/interface/: handlers.rs  mod.rs
src/interface/templates/: list_users.html  register_user.html
src/service/: user_service.rs
src/use_case/user/: list_users.rs  mod.rs  register_user.rs
